enhance pane functionality - new pane parameter for addRasterImage - new updateMapPane function to set zIndex + visibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ export(setMaxBounds)
 export(setView)
 export(showGroup)
 export(tileOptions)
+export(updateMapPane)
 export(validateCoords)
 import(crosstalk)
 importFrom(grDevices,col2rgb)
